syntax = "proto3";

package serving;

option go_package = "github.com/explodes/serving/proto";

message Address {
  string host = 1;
  uint32 port = 2;
}

message GrpcServer {
  Address address = 1;
}